coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__transcript__tests__transcript_modal_parallel_glob_results.snap
---
source: app/tui/src/presentation/transcript.test.rs
expression: "render_transcript_text(&app_state, &state, 84, 14)"
---
┌ Transcript ──────────────────────────────────────────────────────────────────────┐
│  ‖ 2 in parallel · Glob ×2                                                       │
│                                                                                  │
│● Glob(**/*.rs)                                                                   │
│  └ src/lib.rs                                                                    │
│    src/main.rs                                                                   │
│                                                                                  │
│● Glob(**/*.md)                                                                   │
│  └ README.md                                                                     │
│    AGENTS.md                                                                     │
│                                                                                  │
│ctrl+o toggle · ↑/↓ scroll · PgUp/PgDn page · Home/End jump                       │
│Tab select · Enter expand/collapse · Esc/q quit                                   │
└──────────────────────────────────────────────────────────────────────────────────┘
