coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__transcript__tests__transcript_overlay_expanded_truncation_tail.snap
---
source: app/tui/src/presentation/transcript.test.rs
expression: "render_transcript_text(&state, &overlay, 84, 12)"
---
┌ Transcript ──────────────────────────────────────────────────────────────────────┐
│    expanded-line-1994                                                            │
│    expanded-line-1995                                                            │
│    expanded-line-1996                                                            │
│    expanded-line-1997                                                            │
│    expanded-line-1998                                                            │
│    expanded-line-1999                                                            │
│    … output truncated in UI                                                      │
│                                                                                  │
│ctrl+o toggle · ↑/↓ scroll · PgUp/PgDn page · Home/End jump                       │
│Tab select · Enter expand/collapse · Esc/q quit                                   │
└──────────────────────────────────────────────────────────────────────────────────┘
