coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__transcript__tests__transcript_overlay_selected_tool_preview.snap
---
source: app/tui/src/presentation/transcript.test.rs
expression: "render_transcript_text(&state, &overlay, 84, 14)"
---
┌ Transcript ──────────────────────────────────────────────────────────────────────┐
│> inspect src/lib.rs                                                              │
│                                                                                  │
│▶ • 🔨  Read({})                                                                   │
│    pub fn alpha() {}                                                             │
│    pub fn beta() {}                                                              │
│    pub fn gamma() {}                                                             │
│    pub fn delta() {}                                                             │
│    pub fn epsilon() {}                                                           │
│    pub fn zeta() {}                                                              │
│                                                                                  │
│ctrl+o toggle · ↑/↓ scroll · PgUp/PgDn page · Home/End jump                       │
│Tab select · Enter expand/collapse · Esc/q quit                                   │
└──────────────────────────────────────────────────────────────────────────────────┘
