coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__transcript__tests__transcript_overlay_streaming_tail.snap
---
source: app/tui/src/presentation/transcript.test.rs
expression: "render_transcript_text(&state, &overlay, 84, 12)"
---
┌ Transcript ──────────────────────────────────────────────────────────────────────┐
│> summarize status                                                                │
│                                                                                  │
│⏺ Working through the transcript pager changes.                                   │
│▌                                                                                 │
│                                                                                  │
│                                                                                  │
│                                                                                  │
│                                                                                  │
│ctrl+o toggle · ↑/↓ scroll · PgUp/PgDn page · Home/End jump                       │
│Tab select · Enter expand/collapse · Esc/q quit                                   │
└──────────────────────────────────────────────────────────────────────────────────┘
